syntax = "proto3";

package shared.v1;
option go_package = "github.com/studyguides-com/study-guides-api/api/v1/shared;sharedv1";

enum TagType {
  TAG_TYPE_UNSPECIFIED = 0;
  TAG_TYPE_CATEGORY = 1;
  TAG_TYPE_SUB_CATEGORY = 2;
  TAG_TYPE_UNIVERSITY = 3;
  TAG_TYPE_REGION = 4;
  TAG_TYPE_DEPARTMENT = 5;
  TAG_TYPE_COURSE = 6;
  TAG_TYPE_TOPIC = 7;
  TAG_TYPE_USER_STUDY_GUIDE = 8;
  TAG_TYPE_USER_CONTENT = 9;
  TAG_TYPE_USER_FOLDER = 10;
  TAG_TYPE_USER_TOPIC = 11;
  TAG_TYPE_ORGANIZATION = 12;
  TAG_TYPE_CERTIFYING_AGENCY = 13;
  TAG_TYPE_CERTIFICATION = 14;
  TAG_TYPE_MODULE = 15;
  TAG_TYPE_DOMAIN = 16;
  TAG_TYPE_ENTRANCE_EXAM = 17;
  TAG_TYPE_AP_EXAM = 18;
  TAG_TYPE_BRANCH = 19;
  TAG_TYPE_INSTRUCTION_TYPE = 20;
  TAG_TYPE_INSTRUCTION_GROUP = 21;
  TAG_TYPE_INSTRUCTION = 22;
  TAG_TYPE_CHAPTER = 23;
  TAG_TYPE_SECTION = 24;
} 