package mcp

import (
	"context"
	"fmt"

	"github.com/studyguides-com/study-guides-api/internal/lib/ai"
	"github.com/studyguides-com/study-guides-api/internal/mcp/tag"
	"github.com/studyguides-com/study-guides-api/internal/store"
	sharedpb "github.com/studyguides-com/study-guides-api/api/v1/shared"
)

// Example integration showing how to use the MCP server with existing infrastructure

// MockTagRepository implements the TagRepository interface for demonstration
type MockTagRepository struct {
	tags []tag.Tag
}

// Implement the generic Repository interface
func (r *MockTagRepository) Find(ctx context.Context, filter tag.TagFilter) ([]tag.Tag, error) {
	// In a real implementation, this would query the database with the filter
	var results []tag.Tag
	
	for _, t := range r.tags {
		// Apply filter logic
		if filter.Type != nil && t.Type != *filter.Type {
			continue
		}
		if filter.Public != nil && t.Public != *filter.Public {
			continue
		}
		if filter.Name != nil && t.Name != *filter.Name {
			continue
		}
		
		results = append(results, t)
		
		// Apply limit
		if filter.Limit != nil && len(results) >= *filter.Limit {
			break
		}
	}
	
	return results, nil
}

func (r *MockTagRepository) FindByID(ctx context.Context, id string) (*tag.Tag, error) {
	for _, t := range r.tags {
		if t.ID == id {
			return &t, nil
		}
	}
	return nil, fmt.Errorf("tag not found: %s", id)
}

func (r *MockTagRepository) Create(ctx context.Context, entity tag.Tag) (*tag.Tag, error) {
	// Generate ID and set timestamps in real implementation
	entity.ID = fmt.Sprintf("tag_%d", len(r.tags)+1)
	r.tags = append(r.tags, entity)
	return &entity, nil
}

func (r *MockTagRepository) Update(ctx context.Context, id string, update tag.TagUpdate) (*tag.Tag, error) {
	for i, t := range r.tags {
		if t.ID == id {
			// Apply updates
			if update.Name != nil {
				t.Name = *update.Name
			}
			if update.Description != nil {
				t.Description = update.Description
			}
			if update.Public != nil {
				t.Public = *update.Public
			}
			
			r.tags[i] = t
			return &t, nil
		}
	}
	return nil, fmt.Errorf("tag not found: %s", id)
}

func (r *MockTagRepository) Delete(ctx context.Context, id string) error {
	for i, t := range r.tags {
		if t.ID == id {
			r.tags = append(r.tags[:i], r.tags[i+1:]...)
			return nil
		}
	}
	return fmt.Errorf("tag not found: %s", id)
}

func (r *MockTagRepository) Count(ctx context.Context, filter tag.TagFilter) (int, error) {
	results, err := r.Find(ctx, filter)
	return len(results), err
}

// Tag-specific methods (implement as needed)
func (r *MockTagRepository) FindByParent(ctx context.Context, parentID string) ([]tag.Tag, error) {
	var results []tag.Tag
	for _, t := range r.tags {
		if t.ParentTagID != nil && *t.ParentTagID == parentID {
			results = append(results, t)
		}
	}
	return results, nil
}

func (r *MockTagRepository) FindRoots(ctx context.Context, filter tag.TagFilter) ([]tag.Tag, error) {
	var results []tag.Tag
	for _, t := range r.tags {
		if t.ParentTagID == nil {
			results = append(results, t)
		}
	}
	return results, nil
}

// Add other required methods with stub implementations...
func (r *MockTagRepository) FindHierarchy(ctx context.Context, tagID string, maxDepth int) (*tag.TagHierarchy, error) {
	return nil, fmt.Errorf("not implemented")
}

func (r *MockTagRepository) FindAncestors(ctx context.Context, tagID string) ([]tag.Tag, error) {
	return nil, fmt.Errorf("not implemented")
}

func (r *MockTagRepository) UniqueTypes(ctx context.Context) ([]sharedpb.TagType, error) {
	return nil, fmt.Errorf("not implemented")
}

func (r *MockTagRepository) UniqueContexts(ctx context.Context) ([]sharedpb.ContextType, error) {
	return nil, fmt.Errorf("not implemented")
}

func (r *MockTagRepository) GetStats(ctx context.Context, filter tag.TagFilter) (*tag.TagStats, error) {
	return nil, fmt.Errorf("not implemented")
}

func (r *MockTagRepository) Search(ctx context.Context, options tag.TagSearchOptions) ([]tag.Tag, error) {
	return nil, fmt.Errorf("not implemented")
}

func (r *MockTagRepository) ValidateHierarchy(ctx context.Context, childID, parentID string) error {
	return nil
}

func (r *MockTagRepository) UpdateHierarchyFlags(ctx context.Context, tagID string) error {
	return nil
}

func (r *MockTagRepository) BulkUpdateParent(ctx context.Context, tagIDs []string, newParentID *string) error {
	return fmt.Errorf("not implemented")
}

// ExampleUsage demonstrates how to integrate the MCP server
func ExampleUsage() {
	ctx := context.Background()
	
	// 1. Create your AI client (using existing infrastructure) 
	// Replace with actual API key from environment
	aiClient := ai.NewClient("your-openai-api-key", "gpt-4")
	
	// 2. Create the MCP processor
	mcpProcessor := NewMCPProcessor(aiClient)
	
	// 3. Create and register repositories
	tagRepo := &MockTagRepository{
		tags: []tag.Tag{
			{
				ID:     "tag_1",
				Name:   "Mathematics",
				Type:   sharedpb.TagType_Category,
				Public: true,
			},
			{
				ID:     "tag_2", 
				Name:   "Algebra",
				Type:   sharedpb.TagType_Topic,
				Public: true,
			},
		},
	}
	
	// Register the tag repository
	mcpProcessor.Register(tag.ResourceName, tagRepo, tag.GetResourceSchema())
	
	// 4. Use the processor with natural language
	response, err := mcpProcessor.ProcessRequest(ctx, "find all public tags")
	if err != nil {
		fmt.Printf("Error: %v\n", err)
		return
	}
	
	fmt.Printf("Response: %+v\n", response)
	
	// 5. Or use direct commands
	cmd := Command{
		Resource:  "tag",
		Operation: OperationFind,
		Payload: map[string]interface{}{
			"public": true,
			"limit":  10,
		},
	}
	
	directResponse, err := mcpProcessor.DirectCommand(ctx, cmd)
	if err != nil {
		fmt.Printf("Error: %v\n", err)
		return
	}
	
	fmt.Printf("Direct Response: %+v\n", directResponse)
}

// IntegrateWithExistingChatService shows how to integrate with your current chat service
func IntegrateWithExistingChatService(store store.Store, aiClient ai.AiClient) *MCPProcessor {
	// Create MCP processor
	mcpProcessor := NewMCPProcessor(aiClient)
	
	// Wrap existing stores to implement the repository interfaces
	// You would create adapters like this:
	
	// tagRepo := NewTagRepositoryAdapter(store.TagStore())
	// userRepo := NewUserRepositoryAdapter(store.UserStore())
	// questionRepo := NewQuestionRepositoryAdapter(store.QuestionStore())
	
	// Register all repositories
	// mcpProcessor.Register("tag", tagRepo, tag.GetResourceSchema())
	// mcpProcessor.Register("user", userRepo, user.GetResourceSchema())
	// mcpProcessor.Register("question", questionRepo, question.GetResourceSchema())
	
	return mcpProcessor
}

// MigrationStrategy shows how to gradually migrate from current system
func MigrationStrategy() {
	fmt.Println(`
Migration Strategy:

Phase 1: Parallel Implementation
- Keep existing chat.go and handlers working
- Build MCP server alongside current system  
- Test with subset of operations (tags only)
- Compare responses for consistency

Phase 2: Feature Flag Migration
- Add feature flag to choose between old/new system
- Migrate one operation at a time
- Monitor performance and accuracy
- Rollback capability if issues arise

Phase 3: Full Migration
- Switch default to new MCP server
- Remove old handlers gradually
- Update chat service to use MCP server directly
- Clean up old tool definitions

Phase 4: Enhancement
- Add new domains (user, question, interaction)
- Implement advanced features (batch operations, caching)
- Add domain-specific operations beyond basic CRUD
- Performance optimization and monitoring

Benefits After Migration:
- Type-safe operations with validation
- Easy to add new domains and operations
- Consistent API patterns across all resources
- Auto-generated tools reduce maintenance
- Better error handling and debugging
`)
}